# fastmodel

./: CHANGELOG.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  version.yml
examples/: ocr.py
src/fastmodel/: __init__.py  cli.py  protocol.py  serve.py
src/fastmodel/backends/: gguf.py  ollama_resolver.py  serve_gguf.py
src/fastmodel/fastapi/: utils.py
src/fastmodel/utils/: importer.py
test/: test_async_boot.py  test_e2e.py  test_importer.py  test_model_merge.py  test_protocol.py
tests/: bench_complex.py  bench_e2e.py  bench_protocol.py  conftest.py  profile_build.py  test_async_boot.py  test_e2e.py  test_importer.py  test_model_merge.py  test_protocol.py  test_status_code.py
