[tool.poetry]
name="fastmodel"
version="1.0.0"
description = "a FastAPI model generator and Ai model serving"
license = "MIT"
authors = ["Iito"]
repository = "https://github.com/Iito/fastmodel"
readme = "README.md"
include = ["LICENCE", "*.json"]
packages = [
    { include = "fastmodel", from = "src" },

]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Framework :: FastAPI",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = ">=3.10,!=3.11.*"
fastapi = ">=0.100.0"
uvicorn = ">=0.24.0"
pydantic = ">=2.5"
click = ">=7.0"
art = ">=6"
python-multipart = ">=0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
pytest-asyncio = ">=0.21"
httpx = ">=0.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.poetry.scripts]
fastmodel = "fastmodel.cli:main"
